<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light">

    <TextView
        android:id="@+id/textViewSignUpTitle"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/color_dark"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        style="@style/global_input_text_style"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:layout_marginBottom="@dimen/margin_s"
        android:hint="@string/email_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        style="@style/global_input_text_style"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:layout_marginBottom="@dimen/margin_s"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPasswordConfirm"
        style="@style/global_input_text_style"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:layout_marginBottom="@dimen/margin_xxl"
        android:hint="@string/password_confirm_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonCheckConnection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCheckConnection"
        style="@style/global_button_style"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:layout_marginBottom="@dimen/margin_s"
        android:background="@drawable/background_transparent_color_round_dark_corners"
        android:paddingVertical="@dimen/margin_l"
        android:text="@string/check_connection"
        android:textColor="@color/color_dark"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        style="@style/global_button_style"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:paddingVertical="@dimen/margin_l"
        android:text="@string/sign_up_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout_snack_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>